# swarph-triage

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: test.yml
docs/: 0.1.0-implementation-plan.md
swarph_triage/: __init__.py  cli.py  config.py  fastapi.py  priority.py  queue.py  regression.py  schema.py  state_machine.py
tests/: test_cli.py  test_edges.py  test_fastapi.py  test_ingest.py  test_maintenance.py  test_priority.py  test_reads.py  test_smoke.py  test_transition.py
